--- a/privacy.html
+++ b/privacy.html
@@ -19,10 +19,7 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>All QuickBooks Online data processed by this app is used solely for the benefit of 
-  the original customer and is restricted to authorized internal personnel.</p>
-
-  <p>Credentials and tokens are stored securely on encrypted drives and are not shared 
-  with any external parties. This app does not collect, sell, or distribute customer data.</p>
+  <p>This app does not collect, sell, or distribute customer data.</p>
 </body>
 </html>
+
