--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,8 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>This app does not collect, sell, or distribute customer data.</p>
+  <p>This app does not collect, sell, distribute, or use external data in any way.</p>
 </body>
 </html>
+
 
